update project name

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.25)
-project(Pixel8)
+project(chip8)
 
 # Create an option to switch between a system sdl library and a vendored sdl library
 option(MYGAME_VENDORED "Use vendored libraries" OFF)
@@ -17,13 +17,13 @@ else()
 endif()
 
 # Create your game executable target as usual
-add_executable(pixel8 src/main.c)
+add_executable(${CMAKE_PROJECT_NAME} src/main.c)
 
 # SDL2::SDL2main may or may not be available. It is e.g. required by Windows GUI applications
 if(TARGET SDL2::SDL2main)
     # It has an implicit dependency on SDL2 functions, so it MUST be added before SDL2::SDL2 (or SDL2::SDL2-static)
-    target_link_libraries(pixel8 PRIVATE SDL2::SDL2main)
+	target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE SDL2::SDL2main)
 endif()
 
 # Link to the actual SDL2 library. SDL2::SDL2 is the shared SDL library, SDL2::SDL2-static is the static SDL libarary.
-target_link_libraries(pixel8 PRIVATE SDL2::SDL2)
+target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE SDL2::SDL2)
